syntax = "proto3";

option csharp_namespace = "ArcFaceRekognitor.Api";
option go_package = "pb/arcFaceRekognitor";

package inference;

service Compare { 
  rpc Comparator (ComparatorRequest) returns (ComparatorReply);  
}

message ComparatorRequest {  
	string request_id = 1;  
	bytes image_bytes1 = 2;
	bytes image_bytes2 = 3;
}

message ComparatorReply {
  double score = 1;
  string error = 2;  
  bool isSame = 3;
  double euclideanDistance = 4;
  double cosineDistance = 5 ;
}